<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/linearlayout"
	android:id="@+id/lly_configuracao">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				style="@style/myTextview"
				android:text="@string/configuracoes_lbl1" />

		   <View android:id="@+id/Divisor1"
				 android:layout_width="fill_parent"
				 android:layout_height="2dip"
				 android:layout_marginTop="15dp"
				 android:background="#A8A8A8" />

			<TextView
				style="@style/myTextview"
				android:text="@string/configuracoes_sexo" />
			<Spinner
				android:id="@+id/configuracoes_spn_sexo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>

			<TextView
				style="@style/myTextview"
				android:text="@string/configuracoes_mes" />
			<Spinner
				android:id="@+id/configuracoes_spn_mes_nascimento"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>

			<Button
				android:id="@+id/configuracoes_btn_salvar"
				style="@style/button"
				android:text="@string/save" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
