<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lly_produtos"
    style="@style/linearlayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/myTextview"
                android:id="@+id/produtos_txt_cate_suca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produtos_label1"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:onClick="share">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#800080"
                    android:src="@drawable/ic_share_white_36dp"
                    android:contentDescription="@string/share" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/share"
                    />

            </LinearLayout>
        </LinearLayout>
        <EditText
            style="@style/myTextview"
            android:id="@+id/produtos_txt_pesquisar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_search"
            android:hint="@string/procurar"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/produtos_lst_produtos"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:divider="#FFECECEC"
            android:dividerHeight="2sp"
        />
    </LinearLayout>
</LinearLayout>