<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp" >
        <LinearLayout
            android:id="@+id/lst_view_produtos_lly_botoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >
            <ImageButton
                android:id="@+id/lst_view_produtos_btn_cancelar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_height="30dp"
                android:textColor="#800080"
                android:background="#FFFFFF"
                android:src="@drawable/ic_action_cancel"
                android:contentDescription="@string/cancel"
                />
            <ImageButton
                android:id="@+id/lst_view_produtos_btn_salvar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_height="30dp"
                android:textColor="#800080"
                android:background="#FFFFFF"
                android:src="@drawable/ic_action_accept"
                android:contentDescription="@string/save"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:baselineAligned="false"
            android:orientation="horizontal" >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lst_view_produtos_lbl_produto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/lst_view_produtos_lbl_produto"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/lst_view_produtos_txt_produto"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textSize="20sp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center|left"
                    android:textStyle="bold"
                    android:gravity="center|left"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                >
                  <TextView
                        android:id="@+id/lst_view_produtos_lbl_sugestao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/lst_view_produtos_lbl_sugestao"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        />

                    <TextView
                        android:id="@+id/lst_view_produtos_txt_sugestao"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/lst_view_produtos_lbl_comprado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:text="@string/lbl_ja_tenho"
                    android:gravity="center"
                    />

                <LinearLayout
                    android:id="@+id/lst_view_produtos_lly_editar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    >

                    <Button
                        android:id="@+id/lst_view_produtos_btn_mais"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="#800080"
                        android:text="+" />
                    <EditText
                        android:id="@+id/lst_view_produtos_txt_comprado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:inputType="numberDecimal"
                        android:textStyle="bold"
                        android:maxLength="4"
                        android:digits="0123456789,"
                        />
                    <Button
                        android:id="@+id/lst_view_produtos_btn_menos"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="#800080"
                        android:text="-"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lst_view_produtos_lly_opcao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/lst_view_produtos_lbl_qtd_comprado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                         />

                </LinearLayout>
            </LinearLayout>
            <ImageButton
                android:id="@+id/lst_view_produtos_btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:src="@drawable/ic_action_edit"/>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/lst_view_produtos_lbl_gasto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:text="@string/lst_view_produtos_lbl_gasto"
                    android:gravity="center"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/lst_view_produtos_lbl_qtd_gasto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        />
                    <ImageView
                        android:id="@+id/lst_view_produtos_img_qtd_gasto_lock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_body"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/produto_ad_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
